--- a/ttsx/templates/tt_goods/detail.html
+++ b/ttsx/templates/tt_goods/detail.html
@@ -48,21 +48,24 @@
                 <span class="show_pirze">¥<em>{{ goods.gprice }}</em></span>
                 <span class="show_unit">单  位：{{ goods.gunit }}</span>
             </div>
+
+            <form method="get" action="/order/lj/">
             <div class="goods_num clearfix">
                 <div class="num_name fl">数 量：</div>
                 <div class="num_add fl">
-                    <input type="text" class="num_show fl" value="1">
+                    <input type="text" class="num_show fl"  name='goods_num' value="1" >
                     <a href="javascript:;" class="add fr">+</a>
                     <a href="javascript:;" class="minus fr">-</a>
                 </div>
             </div>
             <div class="total">总价：<em>{{ goods.gprice }}</em></div>
             <div class="operate_btn">
-                <a href="javascript:;" class="buy_btn">立即购买</a>
+                <input type="submit" value="立即购买" class="buy_btn">
                 <div class="move_cart"></div>
                 <input type="hidden" name="goods_id" value="{{ goods.id }}">
                 <a href="javascript:;" class="add_cart" id="add_cart">加入购物车</a>
             </div>
+                </form>
         </div>
     </div>
 
