--- a/ttsx/static/css/main.css
+++ b/ttsx/static/css/main.css
@@ -20,6 +20,10 @@ html,body{height:100%}
 .login_info{
 	display:none;
 }
+.em3{display: none}
+.em1 ,.em2{
+	line-height:29px;}
+
 
 .login_info em{color:#ff8800}
 
