--- a/ttsx/templates/tt_goods/detail.html
+++ b/ttsx/templates/tt_goods/detail.html
@@ -55,7 +55,7 @@
                     <a href="javascript:;" class="minus fr">-</a>
                 </div>
             </div>
-            <div class="total">总价：<em>{{ goods.gprice }}</em></div>
+            <div class="total">总价：<em>¥ {{ goods.gprice }}</em></div>
             <div class="operate_btn">
                 <a href="javascript:;" class="buy_btn">立即购买</a>
                 <div class="move_cart"></div>
@@ -88,14 +88,11 @@
             </ul>
 
             <div class="tab_content">
-
                 <dl>
                     <dt>商品详情：</dt>
                     <dd>{{ goods.gcontent|safe }} </dd>
                 </dl>
-
             </div>
-
         </div>
     </div>
 {% endblock middle_com %}
