--- a/ttsx/templates/base_top.html
+++ b/ttsx/templates/base_top.html
@@ -34,9 +34,12 @@
 	<div class="search_bar clearfix">
 		<a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
 		<div class="search_con fl">
-			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
-			<input type="button" class="input_btn fr" name="" value="搜索">
-		</div>
+{#            <form method="get" action="{% url 'tt_goods.views.global_search' %}">#}
+            <form method="get" action="/search/">
+			<input type="text" class="input_text fl" name="q" placeholder="搜索商品">
+			<input type="submit" class="input_btn fr"  value="搜索">
+		    </form>
+        </div>
 		<div class="guest_cart fr">
 			<a href="/cart/" class="cart_name fl">我的购物车</a>
 			<div class="goods_count fl">0</div>
@@ -48,8 +51,6 @@
 {% block middle_com %}
 
 
-
 {% endblock middle_com%}
-
 
 {% endblock body%}
