--- a/ttsx/templates/tt_cart/cart.html
+++ b/ttsx/templates/tt_cart/cart.html
@@ -34,7 +34,7 @@
                 price_zong = 0;
                 $('.num_show').each(function (i) {
                     prices = parseFloat(fn_count_num($('.num_show').eq(i))).toFixed(2);
-                    price_zong = parseFloat(price_zong) + parseFloat(prices)
+                    price_zong = parseFloat(price_zong) + parseFloat(prices);
                     price_zong = price_zong.toFixed(2);
                 });
                 $('.settlements .col03 em').html(price_zong);
@@ -229,45 +229,32 @@
         <li class="col05">小计</li>
         <li class="col06">操作</li>
     </ul>
-    <ul class="cart_list_td clearfix">
-        <li class="col01"><input type="checkbox" name="" checked></li>
-        <li class="col02"><img src="/static/images/goods/goods012.jpg"></li>
-        <li class="col03">奇异果<br><em>25.80元/500g</em></li>
-        <li class="col04">500g</li>
-        <li class="col05">25.80元</li>
-        <li class="col06">
-            <div class="num_add">
-                <a href="javascript:;" class="add fl">+</a>
-                <input type="text" class="num_show fl" value="1">
-                <a href="javascript:;" class="minus fl">-</a>
-            </div>
-        </li>
-        <li class="col07">25.80元</li>
-        <li class="col08"><a href="javascript:;">删除</a></li>
-    </ul>
 
-    <ul class="cart_list_td clearfix">
-        <li class="col01"><input type="checkbox" name="" checked></li>
-        <li class="col02"><img src="/static/images/goods/goods003.jpg"></li>
-        <li class="col03">大兴大棚草莓<br><em>16.80元/500g</em></li>
-        <li class="col04">500g</li>
-        <li class="col05">16.80元</li>
-        <li class="col06">
-            <div class="num_add">
-                <a href="javascript:;" class="add fl">+</a>
-                <input type="text" class="num_show fl" value="1">
-                <a href="javascript:;" class="minus fl">-</a>
-            </div>
-        </li>
-        <li class="col07">16.80元</li>
-        <li class="col08"><a href="javascript:;">删除</a></li>
-    </ul>
-
+    <form method="get" action="/order/tt_order/">
+    {% for cart in clist %}
+  	<ul class="cart_list_td clearfix">
+		<li class="col01"><input type="checkbox" name="cid" checked value="{{ cart.id }}"></li>
+		<li class="col02"><img src="/static/{{ cart.goods.gpic }}"></li>
+		<li class="col03">{{ cart.goods.gtitle }}<br><em>25.80元/500g</em></li>
+		<li class="col04">500g</li>
+		<li class="col05">25.80元</li>
+		<li class="col06">
+			<div class="num_add">
+				<a href="javascript:;" class="add fl">+</a>
+				<input type="text" class="num_show fl" value="{{ cart.count }}">
+				<a href="javascript:;" class="minus fl">-</a>
+			</div>
+		</li>
+		<li class="col07">25.80元<em></em></li>
+		<li class="col08"><a href="javascript:;">删除</a></li>
+	</ul>
+    {% endfor %}
 
     <ul class="settlements">
         <li class="col01"><input type="checkbox" name="" checked></li>
         <li class="col02">全选</li>
         <li class="col03">合计(不含运费)：<span>¥</span><em>42.60</em><br>共计<b>2</b>件商品</li>
-        <li class="col04"><a href="place_order.html">去结算</a></li>
+       <li class="col04"><input type="submit" value="去结算"/></li>
     </ul>
+    </form>
 {% endblock middle_com %}
