--- a/ttsx/templates/tt_user/base_user_center.html
+++ b/ttsx/templates/tt_user/base_user_center.html
@@ -1,6 +1,7 @@
-{% extends 'base_top.html' %}
+{% extends 'base_footer.html' %}
 
-{% block middle_com %}
+
+{% block body %}
 
     <div class="search_bar clearfix">
             <a href="index.html" class="logo fl"><img src="/static/images/logo.png"></a>
@@ -15,5 +16,7 @@
 
     {% endblock userinfo %}
 
-{% endblock middle_com %}
+{% endblock body %}
+
+
 
