--- a/ttsx/templates/tt_cart/base_cart.html
+++ b/ttsx/templates/tt_cart/base_cart.html
@@ -2,34 +2,66 @@
 	 {% block head%}
 	<script type="text/javascript" src="/static/js/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="/static/js/slide.js"></script>
+         	<script>
+    $(function () {
+        {{ no_null|safe }}
+        var name = $.cookie('name');
+        $('.login_info').show();
+        $('.em0').html(name);
+        $('.login_btn').hide();
+
+        $('.login_info').mouseover(function () {
+            $('.em0').hide();
+            $('.em1').html(name);
+            $('.em3').show();
+        })
+        $('.login_info').mouseout(function () {
+            $('.em0').show();
+            $('.em3').hide();
+
+        })
+    })
+    </script>
+
 	 {% endblock head%}
 
 
 {% block body%}
 
-	<div class="header_con">
+	    <div class="header_con">
 		<div class="header">
 			<div class="welcome fl">欢迎来到天天生鲜!</div>
 			<div class="fr">
 				<div class="login_info fl">
-					欢迎您：<em>张 山</em>
+					欢迎您：<div style="display:inline-block"><em class="em0"></em>
+                    <div class="em3">
+                        <em class="em1"></em>
+                        <div class="em2 fr"><a href="/user/logout/">&emsp;注销&emsp;</a></div>
+                    </div></div>
 				</div>
-				<div class="login_btn fl">
-					<a href="tt_user/login.html">登录</a>
+
+				    <div class="login_btn fl">
+					<a href="/user/login/">登录</a>
 					<span>|</span>
-					<a href="tt_user/register.html">注册</a>
-				</div>
+					<a href="/user/register/">注册</a>
+				    </div>
 				<div class="user_link fl">
 					<span>|</span>
-					<a href="user_center_info.html">用户中心</a>
+
+					<a href="/user/center_info/">用户中心</a>
+
 					<span>|</span>
-					<a href="cart.html">我的购物车</a>
+					<a href="/cart/">我的购物车</a>
 					<span>|</span>
-					<a href="user_center_order.html">我的订单</a>
+
+					<a href="/user/center_order/">我的订单</a>
+
 				</div>
 			</div>
 		</div>
+
 	</div>
+
 
 
 {% block middle_com %}
