--- a/ttsx/templates/tt_order/place_order.html
+++ b/ttsx/templates/tt_order/place_order.html
@@ -1,39 +1,11 @@
-{% extends 'tt_order/base_order.html' %}
+{% extends 'base_top.html' %}
 
+   {% block myjs %}
+       <script src="/static/js/plaoe_order.js"></script>
+            {% endblock myjs %}
 
-{% block head %}
-    <script type="text/javascript">
-       $(function(){
-           var total = 0;//商品小计
-           var total1 = 0; //商品总计
-           var total2 = 0; //商品总金额
-           var total_pay = 0; //实付款
-           $('.col07').each(function () {
-               var count1 = parseInt($(this).prev().text());
-               var price = parseFloat($(this).prev().prev().children('span').text());
-               total = count1*price;
-               $(this).text(total.toFixed(2)+'元');
-               total1++;
-               total2+=total;
-           });
-           total_pay = total2 + 10;
-           $('.total_goods_count').children('em').text(total1);
-           $('.total_goods_count').children('b').text(total2.toFixed(2)+'元');
-           $('.total_pay').children('b').text(total_pay.toFixed(2)+'元');
-
-       })
-    </script>
-{% endblock head %}
 {% block middle_com %}
 
-	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="/static/images/logo.png"></a>
-		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;提交订单</div>
-		<div class="search_con fr">
-			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
-			<input type="button" class="input_btn fr" name="" value="搜索">
-		</div>
-	</div>
 
     <form method="post" action="/order/refer_order/">
 
