--- a/ttsx/templates/base_footer.html
+++ b/ttsx/templates/base_footer.html
@@ -3,6 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>{{title}}</title>
+      <link rel="shortcut icon" type="image/x-icon" href="/static/images/logo.png" media="screen" />
 	<link rel="stylesheet" type="text/css" href="/static/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="/static/css/main.css">
 	<script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
