--- a/ttsx/templates/tt_cart/cart.html
+++ b/ttsx/templates/tt_cart/cart.html
@@ -1,21 +1,14 @@
-{% extends 'tt_cart/base_cart.html' %}
+{% extends 'base_top.html' %}
 
-{% block head %}
 
-    <script src="/static/js/cart.js"></script>
 
-{% endblock head %}
+         {% block myjs %}
+                <script src="/static/js/cart.js"></script>
+            {% endblock myjs %}
+
+
 
 {% block middle_com %}
-
-    <div class="search_bar clearfix">
-        <a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
-        <div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;购物车</div>
-        <div class="search_con fr">
-            <input type="text" class="input_text fl" name="" placeholder="搜索商品">
-            <input type="button" class="input_btn fr" name="" value="搜索">
-        </div>
-    </div>
 
     <div class="total_count">全部商品<em>2</em>件</div>
     <ul class="cart_list_th clearfix">
