--- a/ttsx/templates/tt_goods/detail.html
+++ b/ttsx/templates/tt_goods/detail.html
@@ -1,8 +1,8 @@
 {% extends 'base_top.html' %}
+ {% block myjs %}
+       <script src="/static/js/detail.js"></script>
+            {% endblock myjs %}
 
-{% block head %}
-    <script src="/static/js/detail.js"></script>
-{% endblock head %}
 {% block middle_com %}
     <div class="navbar_con">
         <div class="navbar clearfix">
