--- a/ttsx/templates/tt_user/user_center_info.html
+++ b/ttsx/templates/tt_user/user_center_info.html
@@ -14,9 +14,9 @@
 				<div class="info_con clearfix">
 				<h3 class="common_title2">基本信息</h3>
 						<ul class="user_info_list">
-							<li class="li1"></li>
-							<li></li>
-							<li><span>联系地址：</span></li>
+							<li class="li1">用户名：{{ name }}</li>
+							<li>联系方式：{{ phone }}</li>
+							<li><span>联系地址：</span>{{ add }}</li>
 						</ul>
 				</div>
 
@@ -28,12 +28,12 @@
                       {% for good in goods_list %}
 
 				<li>
-					<a href="detail.html"><img src="/static/images/goods/goods003.jpg"></a>
-					<h4><a href="detail.html">{{ good.gtitle }}</a></h4>
+					<a href="/{{ good.id }}/"><img src="/static/{{ good.gpic }}"></a>
+					<h4><a href="/{{ good.id }}/">{{ good.gtitle }}</a></h4>
 					<div class="operate">
 						<span class="prize">￥{{ good.price }}</span>
 						<span class="unit">{{ good.gprice }}/{{ good.gunit }}</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
+						<a href="/{{ good.id }}/" class="add_goods" title="加入购物车"></a>
 					</div>
 				</li>
                         {% endfor %}
